[gd_scene load_steps=4 format=3 uid="uid://dlwphw117q6cb"]

[ext_resource type="Script" uid="uid://c7pg8cf7xc4wa" path="res://Landmark/landmark.gd" id="1_1vhnf"]
[ext_resource type="Texture2D" uid="uid://cvplwrpv71a5f" path="res://Landmark/1_puerto_gerappo.png" id="2_lsfip"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lsfip"]
radius = 291.13913

[node name="Landmark" type="Node2D"]
script = ExtResource("1_1vhnf")

[node name="LandmarkPicture" type="Sprite2D" parent="."]
texture = ExtResource("2_lsfip")

[node name="LandmarkSound" type="AudioStreamPlayer2D" parent="."]
max_distance = 5000.0
attenuation = 0.25
bus = &"LandmarkSounds"

[node name="Area2D" type="Area2D" parent="." groups=["landmark"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_lsfip")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
